prevent scrolling of content behind Modal component #990 (#1002)
* prevent scrolling of content behind Modal component #990

* renaming of bodyModalOpen and fixing failed tests

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -44,6 +44,10 @@ body, html {
   line-height: 1.4;
 }
 
+.bodyModalOpen {
+  overflow: hidden;
+}
+
 .content {
   margin: 0 auto;
   padding: 0;
